--- a/login_authentication/loginregisterjs/register.html
+++ b/login_authentication/loginregisterjs/register.html
@@ -19,6 +19,6 @@
       &nbsp;<a href="login.html">Go to Login</a>
     </form>
 
-    <script src="regi"></script>
+    <script src="register.js"></script>
   </body>
 </html>
